fixed breakfast, lunch, dinner image alignement

--- a/NyCss v3/index/screen.css
+++ b/NyCss v3/index/screen.css
@@ -10,16 +10,15 @@ body{
 }
 /*index page*/
 #overalImg{
-	
 	margin-top: 40px;
 }
-#thickboxImg img{
+.thickboxImg img{
 	padding: 5px;
 	width: 300px; 
 	height: 200px;
 	
 }
-#thickboxImg{
+.thickboxImg{
 	text-align: center;
 }
 
@@ -113,27 +112,30 @@ nav ul li ul li:hover a {
 	
 }
 	
-
+/*Lunch, Breakfast, Dinner*/
 div.img {
-    margin: 5px;
-    padding: 5px;
-    border: 1px solid #0000ff;
-    height: auto;
-    width: auto;
-    float: left;
-    text-align: center;
+	display:inline-block;
+	width: 320px;
+	height: 284px;
+	margin-top: 60px;
+	padding: 4px;
+    border: 1px solid #000;
 }	
 
 div.img img {
-    display: inline;
+	width: 300px;
+	height: 200px;
     margin: 5px;
     border: 1px solid #ffffff;
 }
 
-div.img a:hover img {
-    border: 1px solid #0000ff;
+.img h3{
+	text-align: center;
 }
 
+div.img a:hover img {
+    border: 1px solid #000;
+}
 
 h1{
 color: #363636;
@@ -178,22 +180,7 @@ margin: 0 auto;
 	
 }
 
-.img h3{
-	text-align: center;
-}
 
-div.img {
-	margin-top: 40px;
-	margin-left: 5px;
-    border: 1px solid #000;
-    height: auto;
-    width: auto;
-    float: left;
-    text-align: center;
-}
-div.img a:hover img {
-    border: 1px solid #000;
-}
 /*Calendar css*/
 table{
 	margin-top: 70px;
@@ -211,15 +198,15 @@ table, td, th{
 
 td{
 	background-color: #f1b6b8;
-	width: 125px;
+	width: 175px;
 	height: 125px;
 	vertical-align: top;
 	text-align: left;
 }
 td img{
 
-	margin-left: 20%;
-	width: 100px;
+	margin-left: 10%;
+	width: 150px;
 	height: 100px;
 }
 	#globalImg h2{
